2023-02-05 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c,
	  support/regression/tests/bug-3547.c:
	  Fix bug #3547.

2023-02-04 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCerr.h,
	  src/SDCCerr.c,
	  src/SDCC.y:
	  Warn on deprecated _sdcc_external_startup, RFE #868.
	* device/lib/printf_large.c,
	  .version,
	  doc/sdccman.lyx,
	  support/regression/tests/snprintf.c.in:
	  Fix endiannness of %p output, based on patch #457 by Basil Hussain, bug #3543.
	* src/SDCCast.c,
	  src/SDCCglue.c,
	  support/valdiag/tests/bug-3060.c:
	  Fix bug #3060.
	* src/SDCCpeeph.c:
	  Fix bug #3545.

2023-02-02 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/cases/Makefile.in:
	  Disable a test that often times out on slower machines in the compile farm (due a large number of slow operations in a loop).

2023-02-01 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/bug-3249.c:
	  Do not test non-intrinsic named address space areas for mcs51, as DATA is overwritten by stack there.
	* support/regression/MakeList:
	  Disable a test for -mmcs51 --model-small --stack-auto that is known to fail for mcs51 with --stack-auto (bug #3540).
	* src/SDCCglue.c,
	  support/regression/tests/bug-1981238.c:
	  Fix bug #3542.

2023-01-31 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCglue.c:
	  Fix bug #2837 for z80 and related.

2023-01-30 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCsymt.c,
	  support/regression/tests/bug-3025.c,
	  support/regression/cases/Makefile.in,
	  Fix bug #3025.
	* src/mos6502/peeph.def:
	  Disable a rule that uses not-yet-implemented notUsed.
	* src/pdk/gen.c:
	  Fix a pdk issue similar to mcs51 bug #3023.
	* src/SDCC.y,
	  device/lib/printf_large.c,
	  device/lib/printfl.c,
	  device/lib/sprintf.c,
	  device/lib/vprintf.c:
	  Fix bug #3497.
	* src/z80/gen.c,
	  support/regression/tests/bug-3249.c:
	  Fix bug #3249.
	* support/regression/tests/inline.c: